--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,17 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  dio: ^5.4.3+1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_dotenv: ^5.1.0
   formz: ^0.7.0
   go_router: ^14.2.0
   google_fonts: ^6.2.1
+  riverpod: ^2.5.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -26,6 +30,7 @@ flutter:
 
   # Añade esta sección para incluir tus assets
   assets:
+    - .env
     - assets/images/
     # Si prefieres especificar archivos individuales, puedes hacerlo así:
     # - assets/images/tu_imagen_de_fondo.png
